--- a/02-WebFundamentals/project/main.scss
+++ b/02-WebFundamentals/project/main.scss
@@ -8,7 +8,7 @@ $font-body-bold: "Roboto",
 sans-serif;
 
 $color-primary: rgb(246, 247, 242);
-$color-secondary: rgb(36, 36, 89);
+$color-secondary: rgb(43, 43, 88);
 $color-tertiary: rgb(14, 190, 234);
 $color-footer: rgb(243, 241, 210);
 
@@ -48,9 +48,10 @@ a:visited {
     color: $color-secondary;
     border-radius: 10px;
     text-align: center;
-    padding: 15px 0;
+    padding: 10px 5px;
     font-weight: 500;
-    font-size: 25px;
+    font-size: 20px;
+    white-space: nowrap;
 }
 
 .bluebutton {
@@ -64,17 +65,19 @@ a:visited {
     padding: 15px 50px;
     font-weight: 500;
     font-size: 25px;
+    white-space: nowrap;
 }
 
 .footlink {
     display: block;
     height: 30px;
     width: auto;
-    background-color:$color-footer;
+    background-color: $color-footer;
     text-align: center;
     font-weight: 500;
     font-size: 20px;
     padding: 8px 100px;
+
 }
 
 .bold {
@@ -105,94 +108,103 @@ header {
         text-align: center;
         align-items: center;
 
-        h1 {            
+        h1 {
             color: $color-tertiary;
             font-weight: 600;
-            font-size: 45px;
+            font-size: 35px;
         }
 
         img {
             padding: 40px 0;
             width: 100%;
+            box-shadow: 0 0 15px 0px rgb(241, 244, 222);
+            clip-path: inset(0px -20px 0px -20px);
+            position: relative;
         }
 
-        h2 {            
+        h2 {
             color: $color-secondary;
             padding: 20px 0;
             font-weight: 500;
             font-size: 30px;
         }
 
-        h3 {            
+        h3 {
             color: $color-tertiary;
             padding: 20px 0;
             font-weight: 500;
             font-size: 25px;
         }
 
-        h4 {            
+        h4 {
             color: $color-secondary;
             padding: 20px 0;
             font-size: 20px;
         }
-
-        #blue1 {
-
-        }
-
-        h2 {}
     }
 }
 
 content {
-    padding: 50px 50px;
+    padding: 0 50px;
     height: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    color: $color-secondary;
 
     #peng1 {
         display: flex;
         flex-direction: row;
-        h3 {
-            height: 50px;
-            flex-direction: column;
-            justify-content: center;
+        align-items: center;
+
+        img {
+            width: 300px;
+            height: auto;
+            vertical-align: middle;
         }
     }
+
     #peng2 {
         display: flex;
         flex-direction: row;
-        h3 {
-            height: 50px;
-            flex-direction: column;
-            justify-content: center;
+        align-items: center;
+
+        img {
+            width: 300px;
+            height: auto;
+            vertical-align: middle;
         }
     }
+
     #peng3 {
         display: flex;
         flex-direction: row;
-        h3 {
-            height: 50px;
-            flex-direction: column;
-            justify-content: center;
+        align-items: center;
+
+        img {
+            width: 400px;
+            height: auto;
+            vertical-align: middle;
         }
     }
+
     #peng4 {
         display: flex;
         flex-direction: row;
-        h3 {
-            height: 50px;
-            flex-direction: column;
-            justify-content: center;
+        align-items: center;
+
+        img {
+            width: 300px;
+            height: auto;
+            vertical-align: middle;
         }
     }
-    }
+}
 
 footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: $color-footer;    
+    background-color: $color-footer;
 }
