used modular scss to import all attributes from separate files

--- a/02-WebFundamentals/project/main.scss
+++ b/02-WebFundamentals/project/main.scss
@@ -1,210 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Boogaloo&family=Roboto:ital,wght@0,300;0,400;0,500;1,100&display=swap');
-
-$font-logo: "Boogaloo",
-cursive;
-$font-body: "Roboto",
-sans-serif;
-$font-body-bold: "Roboto",
-sans-serif;
-
-$color-primary: rgb(246, 247, 242);
-$color-secondary: rgb(43, 43, 88);
-$color-tertiary: rgb(14, 190, 234);
-$color-footer: rgb(243, 241, 210);
-
-
-* {
-    margin: 0;
-    padding: 0;
-    max-width: 768px;
-    font-family: $font-body;
-    font-weight: 300;
-    background-color: $color-primary;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-a:link,
-a:visited {
-    text-decoration: none;
-}
-
-.logo {
-    font-family: $font-logo;
-    font-size: 50px;
-    color: $color-secondary;
-}
-
-.button {
-    display: block;
-    width: 100px;
-    height: auto;
-    border: 1px solid $color-secondary;
-    background-color: $color-primary;
-    color: $color-secondary;
-    border-radius: 10px;
-    text-align: center;
-    padding: 10px 5px;
-    font-weight: 500;
-    font-size: 20px;
-    white-space: nowrap;
-}
-
-.bluebutton {
-    display: block;
-    height: auto;
-    margin: 50px;
-    background-color: $color-secondary;
-    color: $color-primary;
-    border-radius: 10px;
-    text-align: center;
-    padding: 15px 50px;
-    font-weight: 500;
-    font-size: 25px;
-    white-space: nowrap;
-}
-
-.footlink {
-    display: block;
-    height: 30px;
-    width: auto;
-    background-color: $color-footer;
-    text-align: center;
-    font-weight: 500;
-    font-size: 20px;
-    padding: 8px 100px;
-
-}
-
-.bold {
-    font-weight: 500;
-}
-
-.italics {
-    font-style: italic;
-}
-
-.top {
-    height: 10vh;
-    background-color: $color-primary;
-    padding: 0 40px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-header {
-    padding: 50px 100px;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    div {
-        text-align: center;
-        align-items: center;
-
-        h1 {
-            color: $color-tertiary;
-            font-weight: 600;
-            font-size: 35px;
-        }
-
-        img {
-            padding: 40px 0;
-            width: 100%;
-            box-shadow: 0 0 15px 0px rgb(241, 244, 222);
-            clip-path: inset(0px -20px 0px -20px);
-            position: relative;
-        }
-
-        h2 {
-            color: $color-secondary;
-            padding: 20px 0;
-            font-weight: 500;
-            font-size: 30px;
-        }
-
-        h3 {
-            color: $color-tertiary;
-            padding: 20px 0;
-            font-weight: 500;
-            font-size: 25px;
-        }
-
-        h4 {
-            color: $color-secondary;
-            padding: 20px 0;
-            font-size: 20px;
-        }
-    }
-}
-
-content {
-    padding: 0 50px;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    color: $color-secondary;
-
-    #peng1 {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-
-        img {
-            width: 300px;
-            height: auto;
-            vertical-align: middle;
-        }
-    }
-
-    #peng2 {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-
-        img {
-            width: 300px;
-            height: auto;
-            vertical-align: middle;
-        }
-    }
-
-    #peng3 {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-
-        img {
-            width: 400px;
-            height: auto;
-            vertical-align: middle;
-        }
-    }
-
-    #peng4 {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-
-        img {
-            width: 300px;
-            height: auto;
-            vertical-align: middle;
-        }
-    }
-}
-
-footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: $color-footer;
-}
+@import "./base";
+@import "./layout";
+@import "./components";
